# ai-for-good-2-hackathon

./: .gitignore
be/: .env.example  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  pyproject.toml
be/app/: main.py
be/app/api/: deps.py
be/app/api/v1/: admin.py  donors.py  matches.py  patients.py  router.py  stats.py  webhooks.py  ws.py
be/app/core/: celery_app.py  config.py  database.py
be/app/models/: __init__.py  bridge.py  match.py  request.py  user.py
be/app/services/: bedrock_service.py  csv_import_service.py  donor_bot.py  ilp_service.py  nlu_service.py  patient_bot.py  trigger_service.py  waterfall_service.py
be/app/tasks/: optimization_tasks.py  orchestration_tasks.py
be/migrations/: env.py
be/migrations/versions/: 7e8fd24f44ef_add_extended_csv_fields.py
be/tests/: test_matching.py  test_nlu.py
fe/: .env.example  Dockerfile  api.md  docker-compose.yml  package-lock.json  package.json
fe/src/: App.jsx  api.js  index.css  main.jsx
fe/src/components/: AddDonor.jsx  AddPatient.jsx  Button.jsx  Card.jsx  Dashboard.jsx  DataTable.jsx  DonorsPage.jsx  EventsPage.jsx  LandingPage.jsx  MapDashboard.jsx  NavBar.jsx  PatientsPage.jsx  TestPage.jsx  ThreeGraph.jsx  UserDetailsModal.jsx
fe/src/hooks/: usePipelineEvents.jsx
fe/src/services/: telegram.js
