[project]
name = "be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "scipy>=1.14",
    "numpy>=2.1",
    "anthropic>=0.30",
    "httpx>=0.28",
    "python-multipart>=0.0.18",
    "structlog>=24.4",
    "pandas>=2.2",
    "boto3>=1.43.24",
    "python-telegram-bot>=22.7",
]
